# tools

./: .gitignore  .travis.yml  CMakeLists.txt  ControlBoardStateToIPosition_8hpp_source.html  IPlaybackThread_8h_source.html  IRunnable_8h_source.html  PlaybackThread_2LogComponent_8hpp_source.html  PlaybackThread_8hpp_source.html  PlaybackThread__ParamsParser_8h_source.html  Playback_8hpp_source.html  README.md  ROBOTICSLAB_TOOLSConfig.cmake.in  RealToSimControlBoard_2LogComponent_8hpp_source.html  RealToSimControlBoard_8hpp_source.html  RealToSimControlBoard__ParamsParser_8h_source.html  Transformation_8hpp_source.html  annotated.html  classPlaybackThread-members.html  classPlaybackThread.html  classPlaybackThread__ParamsParser-members.html  classPlaybackThread__ParamsParser.html  classRealToSimControlBoard-members.html  classRealToSimControlBoard.html  classRealToSimControlBoard__ParamsParser-members.html  classRealToSimControlBoard__ParamsParser.html  classRunnable-members.html  classRunnable.html  classes.html  classroboticslab_1_1ControlBoardStateToIPosition-members.html  classroboticslab_1_1ControlBoardStateToIPosition.html  classroboticslab_1_1ExposedJoint-members.html  classroboticslab_1_1ExposedJoint.html  classroboticslab_1_1ExposedJointControlledDevice-members.html  classroboticslab_1_1ExposedJointControlledDevice.html  classroboticslab_1_1IPlaybackThread-members.html  classroboticslab_1_1IPlaybackThread.html  classroboticslab_1_1IRunnable-members.html  classroboticslab_1_1IRunnable.html  classroboticslab_1_1LinearTransformation-members.html  classroboticslab_1_1LinearTransformation.html  (+61 more)
.github/workflows/: ci.yml
cmake/: ROBOTICSLAB_TOOLSDescribe.cmake  ROBOTICSLAB_TOOLSDoc.cmake  ROBOTICSLAB_TOOLSOptions.cmake  ROBOTICSLAB_TOOLSPackage.cmake  ROBOTICSLAB_TOOLSSystem.cmake  ROBOTICSLAB_TOOLSVersion.cmake
doc/: CMakeLists.txt  groups.dox  main.dox  tools-install.md
example/cpp/examplePlaybackThread/: CMakeLists.txt  examplePlaybackThread.cpp
examples/cpp/: CMakeLists.txt
examples/cpp/examplePlaybackThread/: CMakeLists.txt  examplePlaybackThread.cpp  examplePlaybackThread.ini.template
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
libraries/Playback/: CMakeLists.txt  Playback.cpp  Playback.hpp
libraries/ToolsYarpPlugins/: CMakeLists.txt  IPlaybackThread.h
libraries/ToolsYarpPlugins/PlaybackThread/: CMakeLists.txt  DeviceDriverImpl.cpp  IPlaybackThreadImpl.cpp  PlaybackThread.cpp  PlaybackThread.hpp  ThreadImpl.cpp
libraries/YarpPlugins/: CMakeLists.txt  IPlaybackThread.h  IRunnable.h
libraries/YarpPlugins/BasicJointCoupling/: BasicJointCoupling.hpp  BasicJointCoupling_ParamsParser.cpp  BasicJointCoupling_ParamsParser.h  BasicJointCoupling_params.md  CMakeLists.txt  DeviceDriverImpl.cpp  IJointCouplingImpl.cpp  LogComponent.cpp  LogComponent.hpp  Transformation.cpp  Transformation.hpp
libraries/YarpPlugins/PlaybackThread/: CMakeLists.txt  DeviceDriverImpl.cpp  IPlaybackThreadImpl.cpp  LogComponent.cpp  LogComponent.hpp  PlaybackThread.cpp  PlaybackThread.hpp  PlaybackThread_ParamsParser.cpp  PlaybackThread_ParamsParser.h  PlaybackThread_params.md  ThreadImpl.cpp
libraries/YarpPlugins/RealToSimControlBoard/: CMakeLists.txt  DeviceDriverImpl.cpp  IControlModeImpl.cpp  IEncodersTimedImpl.cpp  IPositionControlImpl.cpp  IVelocityControlImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  RealToSimControlBoard.cpp  RealToSimControlBoard.hpp  RealToSimControlBoard_ParamsParser.cpp  RealToSimControlBoard_ParamsParser.h  RealToSimControlBoard_params.md  Transformation.hpp
libraries/YarpPlugins/RealToSimControlboard/: CMakeLists.txt  DeviceDriverImpl.cpp  IControlModeImpl.cpp  IEncodersTimedImpl.cpp  IPositionControlImpl.cpp  IVelocityControlImpl.cpp  LogComponent.cpp  LogComponent.hpp  README.md  RealToSimControlboard.cpp  RealToSimControlboard.hpp  RealToSimControlboard.ini  Transformation.cpp  Transformation.hpp
programs/: CMakeLists.txt  pidTuning.py
programs/boxPlot/: README.md
programs/controlBoardStateToIPosition/: CMakeLists.txt  ControlBoardStateToIPosition.cpp  ControlBoardStateToIPosition.hpp  main.cpp
programs/controlboardStateToIPosition/: CMakeLists.txt  ControlboardStateToIPosition.cpp  ControlboardStateToIPosition.hpp  main.cpp
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  main.cpp
programs/getEncs/: getEncs.py
programs/meanVar/: README.md  meanVar.py
programs/openraveppToSTL/: README.md  openraveppToSTL.py
programs/plotTrajectories/: README.md
programs/plotTrajectories3D/: README.md  plotTrajectories3D.py
scripts/admin/: update-dox.sh
scripts/gnome/: roboticslab-tools.desktop
scripts/package/: make_package.bat  make_package.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+4 more)
share/: CMakeLists.txt
share/contexts/BasicJointCoupling/: lacqueyFetch.ini
share/contexts/Playback/: CMakeLists.txt
share/contexts/RealToSimControlBoard/: lacqueyFetch.ini  leftDextra.ini
share/contexts/RealToSimControlboard/: CMakeLists.txt  lacqueyFetch.ini  leftDextra-transform.csv  leftDextra.ini  testRealToSimControlboard.ini
share/testRealToSimControlboard/: CMakeLists.txt
share/testRealToSimControlboard/conf/: testRealToSimControlboard.ini
tests/: CMakeLists.txt  testPlayback.cpp  testPlaybackThread.cpp
tests/testPlayback/: CMakeLists.txt  testPlayback.cpp
tests/testPlaybackThread/: CMakeLists.txt  testPlaybackThread.cpp
