# Copyright: Universidad Carlos III de Madrid (C) 2017
# Authors: Juan G Victores
# CopyPolicy: Released under the terms of the LGPLv2.1 or later

if(ENABLE_exampleProgram)
  add_subdirectory(exampleProgram)
endif()
if(ENABLE_controlboardStateToIPosition)
  add_subdirectory(controlboardStateToIPosition)
endif()

